kubernetes/hue/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hue-ingress
  labels:
    name: hue-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: hue.tkg-des.nuvem.unicamp.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hue
            port: 
              number: 80
  tls:
  - hosts:
      - hue.tkg-des.nuvem.unicamp.br
    secretName: hue.tkg-des.nuvem.unicamp.br-tls
